<resources>
    <string name="app_name">eletric-car-app</string>
    <string name="title">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrido">Km percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_autonomia">Calcular autonomia</string>
    <string name="no_wifi">Internet não disponivel</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
<string name="saved_calc">saved_calc</string>
</resources>
