<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/tv_favoritos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eletric_car"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_preco_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 300.000,00"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />
            <TextView
                android:id="@+id/tv_bateria"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/bateria"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_bateria_value"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="300 KWh"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@id/tv_preco"
                app:layout_constraintTop_toTopOf="@id/tv_bateria" />
            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/potencia"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_potencia_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300 cv"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="@id/tv_potencia"
                app:layout_constraintStart_toEndOf="@id/tv_potencia"/>
            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/recarga"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"
                app:layout_constraintStart_toStartOf="@id/tv_potencia"/>

            <TextView
                android:id="@+id/tv_recarga_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="25 min"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toEndOf="@id/tv_recarga"
                app:layout_constraintTop_toTopOf="@id/tv_recarga"
                app:layout_constraintBottom_toBottomOf="@id/cl_card_content"
                android:layout_marginBottom="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_titulo"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_carros"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/carros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />

    <TextView
        android:id="@+id/tv_favoritos"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/favoritos"
        app:layout_constraintStart_toEndOf="@id/tv_carros"
        app:layout_constraintTop_toTopOf="@id/tv_carros" />


    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <ListView
        android:id="@+id/lv_informacoes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cv_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_calcular"/>

</androidx.constraintlayout.widget.ConstraintLayout>
